# ai-finance-tracker

./: .gitignore  Neo4j-29152eec-Created-2025-05-10.txt  README.md  pyproject.toml
app/: .env  main.py
app/data/: schemas.py
app/frontend/: package-lock.json  package.json  tailwind.config.js
app/frontend/app/: layout.tsx  page.module.css  page.tsx
docs/: exploration.md  ne04j.md  theidea.md
